packages/jsii/test/negatives/neg.method-name.2.ts
///!MATCH_ERROR: Method and property names must use camelCase: hello_world

export class MyClass {
    public hello_world() {
        return "hi";
    }
}
